--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "firebase": "^10.13.0",
-    "vue": "^3.4.37"
+    "vue": "^3.4.37",
+    "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1",
     "vite-plugin-vue-devtools": "^7.3.8"
